refactor(security): Refactor the response key management mechanism of FnAuthService